chapter13/03-weight-based-routing/initial-setup/ism-app-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ism-app-v1
spec:
  selector:
    matchLabels:
      app: ism-app
      version: v1
  replicas: 3
  template:
    metadata:
      labels:
        app: ism-app
        version: v1
    spec:
      containers:
      - name: ism-app-v1
        image: soumiyajit/ism-app-v1
        ports:
        - containerPort: 8080
